monitoring/grafana/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "grafana.cloudjet.click"
  gateways:
  - user/cloudjet-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-grafana.monitoring.svc.cluster.local
        port:
          number: 3000
    corsPolicy:
      allowOrigins:
      - exact: https://grafana.cloudjet.click
      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      - X-Requested-With
      allowCredentials: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana-dr
  namespace: monitoring
spec:
  host: prometheus-grafana.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
# Gateway is managed in helm/templates/gateway.yaml
